@@ -5,22 +5,27 @@ import static org.molgenis.emx2.FilterBean.*;
 import static org.molgenis.emx2.Operator.IS_NULL;
 import static org.molgenis.emx2.Privileges.*;
 import static org.molgenis.emx2.TableType.ONTOLOGIES;
-import static org.molgenis.emx2.graphql.GraphqlApiFactory.transform;
 import static org.molgenis.emx2.graphql.GraphqlApiMutationResult.Status.SUCCESS;
 import static org.molgenis.emx2.graphql.GraphqlApiMutationResult.typeForMutationResult;
 import static org.molgenis.emx2.graphql.GraphqlConstants.*;
 import static org.molgenis.emx2.graphql.GraphqlCustomTypes.GraphQLJsonAsString;
+import static org.molgenis.emx2.graphql.GraphqlExecutor.transform;
 import static org.molgenis.emx2.sql.SqlQuery.*;
 import static org.molgenis.emx2.utils.TypeUtils.convertToPrimaryKeyRows;
 
 import graphql.Scalars;
+import graphql.language.*;
 import graphql.schema.*;
 import java.util.*;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import org.molgenis.emx2.*;
 import org.molgenis.emx2.utils.TypeUtils;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class GraphqlTableFieldFactory {
+  private static final Logger logger = LoggerFactory.getLogger(GraphqlTableFieldFactory.class);
   // static types
   private static final GraphQLEnumType orderByEnum =
       GraphQLEnumType.newEnum()
@@ -51,7 +56,7 @@ public class GraphqlTableFieldFactory {
   private Map<ColumnType, GraphQLInputObjectType> columnFilterInputTypes = new LinkedHashMap<>();
   private Map<String, GraphQLNamedOutputType> tableTypes = new LinkedHashMap<>();
   private Map<String, GraphQLNamedOutputType> tableAggTypes = new LinkedHashMap<>();
-  private Map<String, GraphQLNamedOutputType> tableGroupByTypes = new LinkedHashMap();
+  private Map<String, GraphQLNamedOutputType> tableGroupByTypes = new LinkedHashMap<>();
   private Map<String, GraphQLNamedInputType> tableFilterInputTypes = new LinkedHashMap<>();
   private Map<String, GraphQLNamedInputType> tableOrderByInputTypes = new LinkedHashMap<>();
   private Map<String, GraphQLNamedInputType> rowInputTypes = new LinkedHashMap<>();
@@ -68,7 +73,7 @@ public class GraphqlTableFieldFactory {
       return table.getIdentifier();
     } else {
       // refschema types we prefix with schema
-      return table.getSchema().getIdentifier() + "_" + table.getIdentifier();
+      return table.getSchema().getIdentifier().replace("-", "") + "_" + table.getIdentifier();
     }
   }
 
@@ -78,6 +83,10 @@ public class GraphqlTableFieldFactory {
     return GraphQLFieldDefinition.newFieldDefinition()
         .name(table.getIdentifier())
         .type(GraphQLList.list(tableType))
+        .description(
+            String.format(
+                "Retrieve from table '%s'. Use {%s{...All%sFields}} to select all fields including foreign key nested queries",
+                table.getTableName(), table.getIdentifier(), table.getIdentifier()))
         .dataFetcher(fetcherForTableQueryField(table))
         .argument(
             GraphQLArgument.newArgument()
@@ -150,7 +159,7 @@ public class GraphqlTableFieldFactory {
       tableTypes.put(tableObjectType, GraphQLTypeReference.typeRef(tableObjectType));
       // build the object
       GraphQLObjectType.Builder tableBuilder = GraphQLObjectType.newObject().name(tableObjectType);
-      for (Column col : table.getColumnsWithoutHeadings()) {
+      for (Column col : table.getColumnsIncludingSubclassesExcludingHeadings()) {
         createTableField(col, tableBuilder);
       }
       tableTypes.put(tableObjectType, tableBuilder.build());
@@ -299,49 +308,47 @@ public class GraphqlTableFieldFactory {
   }
 
   private GraphQLNamedOutputType createTableGroupByType(TableMetadata table) {
-    String tableGroupByType = table.getIdentifier() + "GroupBy";
-    if (!tableGroupByTypes.containsKey(tableGroupByType)) {
-      // add reference in case of self reference
-      tableGroupByTypes.put(tableGroupByType, GraphQLTypeReference.typeRef(tableGroupByType));
-      // group by options, for now only ref, refArray
-      GraphQLObjectType.Builder groupByBuilder =
-          GraphQLObjectType.newObject().name(tableGroupByType);
-      groupByBuilder.field(
-          GraphQLFieldDefinition.newFieldDefinition().name("count").type(Scalars.GraphQLInt));
-      List<Column> aggCols =
-          table.getColumns().stream()
-              .filter(
-                  c ->
-                      ColumnType.INT.equals(c.getColumnType())
-                          || ColumnType.DECIMAL.equals(c.getColumnType())
-                          || ColumnType.LONG.equals(c.getColumnType()))
-              .toList();
-      if (aggCols.size() > 0) {
-        GraphQLObjectType.Builder sumBuilder =
-            GraphQLObjectType.newObject().name(tableGroupByType + "_" + SUM_FIELD);
-        for (Column aggCol : aggCols) {
-          sumBuilder.field(
-              GraphQLFieldDefinition.newFieldDefinition()
-                  .name(aggCol.getIdentifier())
-                  .type(graphQLTypeOf(aggCol)));
-        }
-        groupByBuilder.field(
-            GraphQLFieldDefinition.newFieldDefinition().name(SUM_FIELD).type(sumBuilder.build()));
-      }
+    String tableGroupByType = getTableTypeIdentifier(table) + "GroupBy";
 
-      for (Column column : table.getColumns()) {
-        // for now only 'ref' types. We might want to have truncating actions for the other types.
-        if (column.isReference() && (hasViewPermission(table) || column.isOntology())) {
-          groupByBuilder.field(
-              GraphQLFieldDefinition.newFieldDefinition()
-                  .name(column.getIdentifier())
-                  .type(createTableObjectType(column.getRefTable())));
-        } else if (!column.isReference() && hasViewPermission(table)) {
-          createTableField(column, groupByBuilder);
-        }
-      }
-      tableGroupByTypes.put(tableGroupByType, groupByBuilder.build());
+    if (tableGroupByTypes.containsKey(tableGroupByType)) {
+      // add reference in case of self reference
+      return tableGroupByTypes.get(tableGroupByType);
     }
+
+    tableGroupByTypes.put(tableGroupByType, GraphQLTypeReference.typeRef(tableGroupByType));
+
+    GraphQLObjectType.Builder groupByBuilder = GraphQLObjectType.newObject().name(tableGroupByType);
+    groupByBuilder.field(
+        GraphQLFieldDefinition.newFieldDefinition().name("count").type(Scalars.GraphQLInt));
+    List<Column> aggCols =
+        table.getColumnsIncludingSubclasses().stream()
+            .filter(c -> c.getColumnType().isNumericType())
+            .toList();
+    if (aggCols.size() > 0) {
+      GraphQLObjectType.Builder sumBuilder =
+          GraphQLObjectType.newObject().name(tableGroupByType + "_" + SUM_FIELD);
+      for (Column aggCol : aggCols) {
+        sumBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition()
+                .name(aggCol.getIdentifier())
+                .type(graphQLTypeOf(aggCol)));
+      }
+      groupByBuilder.field(
+          GraphQLFieldDefinition.newFieldDefinition().name(SUM_FIELD).type(sumBuilder.build()));
+    }
+
+    for (Column column : table.getColumnsIncludingSubclasses()) {
+      if (column.isReference() && (hasViewPermission(table) || column.isOntology())) {
+        groupByBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition()
+                .name(column.getIdentifier())
+                .type(createTableObjectType(column.getRefTable())));
+      } else if (!column.isReference() && hasViewPermission(table)) {
+        createTableField(column, groupByBuilder);
+      }
+    }
+    tableGroupByTypes.put(tableGroupByType, groupByBuilder.build());
+
     return tableGroupByTypes.get(tableGroupByType);
   }
 
@@ -366,12 +373,8 @@ public class GraphqlTableFieldFactory {
     }
     if (schema.hasActiveUserRole(VIEWER) || table.getTableType().equals(ONTOLOGIES)) {
       List<Column> aggCols =
-          table.getColumns().stream()
-              .filter(
-                  c ->
-                      ColumnType.INT.equals(c.getColumnType())
-                          || ColumnType.DECIMAL.equals(c.getColumnType())
-                          || ColumnType.LONG.equals(c.getColumnType()))
+          table.getColumnsIncludingSubclasses().stream()
+              .filter(c -> c.getColumnType().isNumericType())
               .toList();
 
       if (!aggCols.isEmpty()) {
@@ -421,12 +424,18 @@ public class GraphqlTableFieldFactory {
           tableFilterInputType, GraphQLTypeReference.typeRef(tableFilterInputType));
       GraphQLInputObjectType.Builder filterBuilder =
           GraphQLInputObjectType.newInputObject().name(tableFilterInputType);
-      if (table.getPrimaryKeyColumns().size() > 0) {
-        filterBuilder.field(
-            GraphQLInputObjectField.newInputObjectField()
-                .name(FILTER_EQUALS)
-                .type(GraphQLList.list(getPrimaryKeyInput(table)))
-                .build());
+      if (!table.getPrimaryKeyColumns().isEmpty()) {
+        filterBuilder
+            .field(
+                GraphQLInputObjectField.newInputObjectField()
+                    .name(FILTER_EQUALS)
+                    .type(GraphQLList.list(getPrimaryKeyInput(table)))
+                    .build())
+            .field(
+                GraphQLInputObjectField.newInputObjectField()
+                    .name(FILTER_NOT_EQUALS)
+                    .type(GraphQLList.list(getPrimaryKeyInput(table)))
+                    .build());
       }
       if (TableType.ONTOLOGIES.equals(table.getTableType())) {
         filterBuilder.field(
@@ -465,7 +474,7 @@ public class GraphqlTableFieldFactory {
               .name(FILTER_AND)
               .type(GraphQLList.list(GraphQLTypeReference.typeRef(tableFilterInputType)))
               .build());
-      for (Column col : table.getColumns()) {
+      for (Column col : table.getColumnsIncludingSubclasses()) {
         if (col.isReference()) {
           filterBuilder.field(
               GraphQLInputObjectField.newInputObjectField()
@@ -516,7 +525,7 @@ public class GraphqlTableFieldFactory {
       // build the type
       GraphQLInputObjectType.Builder orderByBuilder =
           GraphQLInputObjectType.newInputObject().name(tableOrderByInputType);
-      for (Column col : table.getColumns()) {
+      for (Column col : table.getColumnsIncludingSubclasses()) {
         orderByBuilder.field(
             GraphQLInputObjectField.newInputObjectField()
                 .name(col.getIdentifier())
@@ -610,13 +619,21 @@ public class GraphqlTableFieldFactory {
                   Arrays.stream(entry.getValue().toString().split(" ")).toArray(String[]::new)));
         }
       } else if (entry.getKey().equals(FILTER_EQUALS)) {
-        //  complex filter, should be an list of maps per graphql contract
+        //  complex filter, should be a list of maps per graphql contract
         if (entry.getValue() != null) {
           subFilters.add(
               or(
                   ((List<Map<String, Object>>) entry.getValue())
-                      .stream().map(v -> createKeyFilter(table, v)).collect(Collectors.toList())));
+                      .stream().map(v -> createKeyFilter(table, v, Operator.EQUALS)).toList()));
         }
+      } else if (entry.getKey().equals(FILTER_NOT_EQUALS)) {
+        if (entry.getValue() != null) {
+          subFilters.add(
+              or(
+                  ((List<Map<String, Object>>) entry.getValue())
+                      .stream().map(v -> createKeyFilter(table, v, Operator.NOT_EQUALS)).toList()));
+        }
+
       } else if (entry.getKey().equals(FILTER_MATCH_INCLUDING_CHILDREN)
           || entry.getKey().equals(FILTER_MATCH_INCLUDING_PARENTS)
           || entry.getKey().equals(FILTER_MATCH_PATH)
@@ -638,17 +655,13 @@ public class GraphqlTableFieldFactory {
         // skip match all, handled on parent column
       } else {
         // find column by escaped name
-        Optional<Column> optional =
-            table.getColumns().stream()
-                .filter(c -> c.getIdentifier().equals(entry.getKey()))
-                .findFirst();
-        if (optional.isEmpty())
+        Column c = table.getColumnByIdIncludingSubclasses(entry.getKey());
+        if (c == null)
           throw new GraphqlException(
               "Graphql API error: Column "
                   + entry.getKey()
                   + " unknown in table "
                   + table.getTableName());
-        Column c = optional.get();
         Map value = (Map) entry.getValue();
         // although nested, this should apply on this level, not sublevel
         if (value.containsKey(FILTER_MATCH_INCLUDING_CHILDREN)) {
@@ -714,7 +727,8 @@ public class GraphqlTableFieldFactory {
     return subFilters.toArray(new FilterBean[subFilters.size()]);
   }
 
-  private static Filter createKeyFilter(TableMetadata table, Map<String, Object> map) {
+  private static Filter createKeyFilter(
+      TableMetadata table, Map<String, Object> map, Operator operator) {
     Objects.requireNonNull(table);
     Objects.requireNonNull(map);
     List<Filter> result = new ArrayList<>();
@@ -729,9 +743,9 @@ public class GraphqlTableFieldFactory {
             f(
                 column.get().getName(),
                 createKeyFilter(
-                    column.get().getRefTable(), (Map<String, Object>) entry.getValue())));
+                    column.get().getRefTable(), (Map<String, Object>) entry.getValue(), operator)));
       } else {
-        result.add(f(column.get().getName(), Operator.EQUALS, entry.getValue()));
+        result.add(f(column.get().getName(), operator, entry.getValue()));
       }
     }
     return and(result);
@@ -755,62 +769,81 @@ public class GraphqlTableFieldFactory {
 
   /** creates a list like List.of(field1,field2, path1, List.of(pathsubfield1), ...) */
   private SelectColumn[] convertMapSelection(
-      TableMetadata aTable, DataFetchingFieldSelectionSet selection) {
+      TableMetadata table, DataFetchingFieldSelectionSet selection) {
     List<SelectColumn> result = new ArrayList<>();
+    if (selection == null) return new SelectColumn[0];
+    Map<String, Column> columnIdentifierMap =
+        table != null
+            ? table.getColumnsIncludingSubclasses().stream()
+                .collect(
+                    Collectors.toMap(
+                        Column::getIdentifier,
+                        Function.identity(),
+                        // might be duplicates from subclass
+                        (existing, replacement) -> existing))
+            :
+            // in case of file table will be empty
+            Map.of();
     for (SelectedField s : selection.getFields()) {
-      if (!s.getQualifiedName().contains("/")) {
-        if (s.getSelectionSet().getFields().isEmpty()) {
-          Optional<Column> column = findColumnById(aTable, s.getName());
-          if (column.isPresent()) {
-            result.add(new SelectColumn(column.get().getName()));
-          } else {
-            result.add(new SelectColumn(s.getName()));
-          }
-        } else {
-          Optional<Column> column = findColumnById(aTable, s.getName());
-          if (column.isPresent()) {
-            SelectColumn sc =
-                new SelectColumn(
-                    column.get().getName()
-                        + (s.getName().endsWith("_agg")
-                            ? "_agg"
-                            : s.getName().endsWith("_groupBy") ? "_groupBy" : ""),
-                    convertMapSelection(
-                        column.get().isReference() ? column.get().getRefTable() : null,
-                        s.getSelectionSet()));
-            // get limit and offset for the selection
-            Map<String, Object> args = s.getArguments();
+      String name = s.getName();
+
+      // Skip nested GraphQL paths like "foo/bar"
+      if (s.getQualifiedName().contains("/")) continue;
+
+      List<SelectedField> subFields = s.getSelectionSet().getFields();
+      Map<String, Object> args = s.getArguments();
+      Column column = columnIdentifierMap.get(name.replaceAll("(_agg|_groupBy)$", ""));
+
+      if (subFields.isEmpty()) {
+        // --- Simple leaf field ---
+        result.add(new SelectColumn(column != null ? column.getName() : name));
+
+      } else {
+        // --- Nested or aggregate field ---
+        String suffix =
+            name.endsWith("_agg") ? "_agg" : name.endsWith("_groupBy") ? "_groupBy" : "";
+
+        if (column != null) {
+          TableMetadata refTable = column.isReference() ? column.getRefTable() : null;
+
+          SelectColumn nested =
+              new SelectColumn(
+                  column.getName() + suffix, convertMapSelection(refTable, s.getSelectionSet()));
+
+          // --- Handle filters, limits, offsets, orderby ---
+          if (args != null && !args.isEmpty()) {
             if (args.containsKey(GraphqlConstants.FILTER_ARGUMENT)) {
-              sc.where(
+              nested.where(
                   convertMapToFilterArray(
-                      column.get().getRefTable(),
-                      (Map<String, Object>) args.get(GraphqlConstants.FILTER_ARGUMENT)));
+                      refTable, (Map<String, Object>) args.get(GraphqlConstants.FILTER_ARGUMENT)));
             }
             if (args.containsKey(GraphqlConstants.LIMIT)) {
-              sc.setLimit((int) args.get(GraphqlConstants.LIMIT));
+              nested.setLimit((int) args.get(GraphqlConstants.LIMIT));
             }
             if (args.containsKey(GraphqlConstants.OFFSET)) {
-              sc.setOffset((int) args.get(GraphqlConstants.OFFSET));
+              nested.setOffset((int) args.get(GraphqlConstants.OFFSET));
             }
             if (args.containsKey(GraphqlConstants.ORDERBY)) {
               TableMetadata orderByTable =
-                  column.get().isReference() ? column.get().getRefTable() : column.get().getTable();
-              sc.setOrderBy(convertOrderByIdsToNames(orderByTable, args));
+                  column.isReference() ? column.getRefTable() : column.getTable();
+              nested.setOrderBy(convertOrderByIdsToNames(orderByTable, args));
             }
-            result.add(sc);
-          } else if (agg_fields.contains(s.getName())) {
-            result.add(
-                new SelectColumn(s.getName(), convertMapSelection(aTable, s.getSelectionSet())));
           }
+          result.add(nested);
+
+        } else if (agg_fields.contains(name)) {
+          // --- Aggregate pseudo-field ---
+          result.add(new SelectColumn(name, convertMapSelection(table, s.getSelectionSet())));
         }
       }
     }
-    return result.toArray(new SelectColumn[result.size()]);
+
+    return result.toArray(SelectColumn[]::new);
   }
 
   private static Optional<Column> findColumnById(TableMetadata aTable, String id) {
     if (aTable != null) {
-      return aTable.getColumns().stream()
+      return aTable.getColumnsIncludingSubclasses().stream()
           .filter(
               c ->
                   c.getIdentifier().equals(id)
@@ -832,6 +865,7 @@ public class GraphqlTableFieldFactory {
       } else if (fieldName.endsWith("_groupBy")) {
         q = table.groupBy();
       }
+      long step = System.currentTimeMillis();
       q.select(convertMapSelection(aTable, dataFetchingEnvironment.getSelectionSet()));
       Map<String, Object> args = dataFetchingEnvironment.getArguments();
       if (dataFetchingEnvironment.getArgument(GraphqlConstants.FILTER_ARGUMENT) != null) {
@@ -854,7 +888,8 @@ public class GraphqlTableFieldFactory {
       if (search != null && !search.trim().equals("")) {
         q.search(search);
       }
-
+      logger.info(
+          "converted graphql to molgenis query in {}ms", (System.currentTimeMillis() - step));
       Object result = transform(q.retrieveJSON());
       // bit silly, we have to remove root field here. Some refactoring makes this look nicer
       if (result != null) {
@@ -869,7 +904,7 @@ public class GraphqlTableFieldFactory {
       TableMetadata aTable, Map<String, Object> args) {
     Map<String, Order> orderBy = (Map<String, Order>) args.get(ORDERBY);
     Map<String, Order> unescapedMap = new HashMap<>();
-    for (var entry : orderBy.entrySet()) {
+    for (Map.Entry<String, Order> entry : orderBy.entrySet()) {
       Optional<Column> column = findColumnById(aTable, entry.getKey());
       if (column.isPresent()) {
         unescapedMap.put(column.get().getName(), entry.getValue());
@@ -887,7 +922,7 @@ public class GraphqlTableFieldFactory {
             .type(typeForMutationResult)
             .dataFetcher(fetcher(schema, type));
     for (TableMetadata table : schema.getMetadata().getTables()) {
-      if (!table.getColumnsWithoutHeadings().isEmpty()) {
+      if (!table.getColumnsIncludingSubclassesExcludingHeadings().isEmpty()) {
         fieldBuilder.argument(
             GraphQLArgument.newArgument()
                 .name(table.getIdentifier())
@@ -976,7 +1011,7 @@ public class GraphqlTableFieldFactory {
       rowInputTypes.put(rowInputType, GraphQLTypeReference.typeRef(rowInputType + INPUT));
       GraphQLInputObjectType.Builder inputBuilder =
           GraphQLInputObjectType.newInputObject().name(rowInputType + INPUT);
-      for (Column col : table.getColumnsWithoutHeadings()) {
+      for (Column col : table.getColumnsIncludingSubclassesExcludingHeadings()) {
         GraphQLInputType type;
         if (col.isReference()) {
           if (col.isRef()) {
@@ -1032,14 +1067,7 @@ public class GraphqlTableFieldFactory {
       case LONG_ARRAY -> GraphQLList.list(GraphQLLong);
       case DECIMAL_ARRAY -> GraphQLList.list(Scalars.GraphQLFloat);
       case JSON -> GraphqlCustomTypes.GraphQLJsonAsString;
-      case STRING_ARRAY,
-              TEXT_ARRAY,
-              DATE_ARRAY,
-              DATETIME_ARRAY,
-              PERIOD_ARRAY,
-              UUID_ARRAY,
-              EMAIL_ARRAY,
-              HYPERLINK_ARRAY ->
+      case STRING_ARRAY, TEXT_ARRAY, DATE_ARRAY, DATETIME_ARRAY, PERIOD_ARRAY, UUID_ARRAY ->
           GraphQLList.list(Scalars.GraphQLString);
       default ->
           throw new MolgenisException(
